typethon/syntax/typethon/typethon.gram
@module:
    #[create_module]
    | !statement+

statement:
    | !simple_statement NEWLINE
    | !assignment_with_lambda
    | !function_def
    | !class_def
    | !use_statement
    # | !for_statement
    | !if_statement
    | !while_statement
    | !sum_type_statement

simple_statement:
    #[create_break_statement]
    | "break"
    #[create_continue_statement]
    | "continue"
    #[create_return_statement]
    | "return" !expression?
    #[create_expr_statement]
    | !expression_with_annotation
    | !assignment
    | !function_prototype
    | !type_declaration

block:
    #[@flatten]
    | NEWLINE INDENT !statement+ DEDENT
    | !simple_statement

assignment_with_lambda:
    #[create_assignment]
    | !expression_with_annotation "=" !expression_with_lambda

assignment:
    #[create_assignment]
    | !expression_with_annotation "=" !expression

decorators: ("@" !expression NEWLINE)+

function_prototype:
    #[create_function_prototype]
    | !decorators? "def" !IDENTIFIER "(" !function_parameters? ")" "->" !type_expression

function_def:
    #[add_function_body]
    | !function_prototype ":" !block

function_parameters:
    #[@prepend]
    | !function_parameter ("," !function_parameter)* ","?

function_parameter:
    #[create_function_parameter]
    | !IDENTIFIER ":" !type_expression ("=" !expression)?

class_def:
    #[create_class]
    | !decorators? "class" !IDENTIFIER ("(" !type_parameter_list ")")? ":" !block

use_statement:
    #[create_use_statement]
    | "use" !type_expression ":" !block
    #[create_use_for_statement]
    | "use" !type_expression "for" !type_expression ":" !block

# for_statement:
    # [create_for_statement]
    # | "for" !target "in" !expression ":" !block

if_statement:
    #[create_if_statement]
    | "if" !expression ":" !block !else_statement?

else_statement:
    #[create_elif_statement]
    | "elif" !expression ":" !block !else_statement?
    #[create_else_statement]
    | "else" ":" !block

while_statement:
    #[create_while_statement]
    | "while" !expression ":" !block

expression:
    | !disjunction
    | !simple_lambda

expression_with_annotation:
    | !expression
    #[create_annotated_expression]
    | !expression ":" !type_expression

expression_with_lambda:
    | !expression
    | !complex_lambda

disjunction:
    #[create_disjunction]
    | !conjunction ("or" !conjunction)+
    | !conjunction

conjunction:
    #[create_conjunction]
    | !inversion ("and" !inversion)+
    | !inversion

inversion:
    #[create_inversion]
    | "not" !inversion
    | !comparison

comparison:
    #[create_comparison]
    | !bitwise_or !comparator+
    | !bitwise_or

comparator:
    #[create_comparator_one]
    | !"==" !bitwise_or
    #[create_comparator_one]
    | !"!=" !bitwise_or
    #[create_comparator_one]
    | !"<=" !bitwise_or
    #[create_comparator_one]
    | !"<" !bitwise_or
    #[create_comparator_one]
    | !">=" !bitwise_or
    #[create_comparator_one]
    | !">" !bitwise_or
    #[create_comparator_two]
    | !"not" !"in" !bitwise_or
    #[create_comparator_one]
    | !"in" !bitwise_or
    #[create_comparator_two]
    | !"is" !"not" !bitwise_or
    #[create_comparator_one]
    | !"is" !bitwise_or

bitwise_or:
    #[create_binary_operator]
    | !bitwise_or !"|" !bitwise_xor
    | !bitwise_xor

bitwise_xor:
    #[create_binary_operator]
    | !bitwise_xor !"^" !bitwise_and
    | !bitwise_and

bitwise_and:
    #[create_binary_operator]
    | !bitwise_and !"&" !shift_expr
    | !shift_expr

shift_expr:
    #[create_binary_operator]
    | !shift_expr !"<<" !sum
    #[create_binary_operator]
    | !shift_expr !">>" !sum
    | !sum

sum:
    #[create_binary_operator]
    | !sum !"+" !term
    #[create_binary_operator]
    | !sum !"-" !term
    | !term

term:
    #[create_binary_operator]
    | !term !"*" !factor
    #[create_binary_operator]
    | !term !"/" !factor
    #[create_binary_operator]
    | !term !"//" !factor
    #[create_binary_operator]
    | !term !"%" !factor
    #[create_binary_operator]
    | !term !"@" !factor
    | !factor

factor:
    #[create_unary_operator]
    | !"+" !factor
    #[create_unary_operator]
    | !"-" !factor
    #[create_unary_operator]
    | !"~" !factor
    | !power

power:
    #[create_binary_operator]
    | !primary !"**" !factor
    | !primary

arguments:
    #[@flatten]
    | !expression_with_annotation ("," !expression_with_annotation)* "," !complex_lambda
    #[@flatten]
    | !expression_with_annotation ("," !expression_with_annotation)+ ","?
    #[@sequence]
    | !expression_with_lambda

primary:
    #[create_attribute]
    | !primary "." !IDENTIFIER
    #[create_call]
    | !primary "(" !arguments? ")"
    #[create_subscript]
    | !primary "[" !slices "]"
    | !atom

slices:
    #[@prepend]
    | !slice ("," !slice)* ","?

slice:
    #[create_slice]
    | !expression ":" !expression (":" !expression)?
    | !expression

atom:
    #[create_constant]
    | !"true"
    #[create_constant]
    | !"false"
    #[create_constant]
    | !"..."
    #[create_name]
    | !IDENTIFIER
    #[create_number]
    | !NUMBER
    #[create_string]
    | !STRING+
    | !struct
    | !tuple
    | !group

expression_list:
    #[@prepend]
    | !expression_with_annotation ("," !expression_with_annotation)+ ","?
    #[@sequence]
    | !expression_with_annotation ","

expression_list_with_lambda:
    #[@flatten]
    | !expression_with_annotation ("," !expression_with_annotation)* "," !complex_lambda
    #[@flatten]
    | !expression_with_annotation ("," !expression_with_annotation)+ ","?
    #[@sequence]
    | !expression_with_annotation ","

lambda_parameters:
    #[@prepend]
    | !lambda_parameter ("," !lambda_parameter)* ","?

lambda_parameter:
    #[create_lambda_parameter]
    | !IDENTIFIER (":" !type_expression)?

lambda_header:
    #[create_lambda]
    | "|" !lambda_parameters? "|" ("->" !type_expression)?

simple_lambda_hook:
    #[stop_nested_indentation]
    | !lambda_header ":"

simple_lambda:
    #[add_simple_statement_to_lambda]
    | !simple_lambda_hook !simple_statement

complex_lambda_hook:
    #[add_statements_to_lambda]
    | !lambda_header ":" NEWLINE INDENT !statement+

complex_lambda:
    | !complex_lambda_hook DEDENT

struct:
    #[create_struct]
    | "{" !struct_fields? "}"

struct_fields:
    #[@prepend]
    | !struct_field ("," !struct_field)* ","?

struct_field:
    #[create_struct_field]
    | !IDENTIFIER "=" !expression_with_annotation

tuple:
    #[create_tuple]
    | "(" !expression_list_with_lambda? ")"

group:
    | "(" !expression_with_annotation ")"
    | "(" !complex_lambda ")"

type_declaration:
    #[create_type_declaration]
    | "type" !IDENTIFIER "=" !type_expression

type_expression:
    | !type_primary

type_primary:
    #[create_type_call]
    | !type_primary "(" !type_expression_list? ")"
    #[create_type_attribute]
    | !type_primary "." !IDENTIFIER
    | !type_atom

type_expression_list:
    #[@prepend]
    | !type_expression ("," !type_expression)* ","?

struct_type_fields:
    #[@prepend]
    | !struct_type_field ("," !struct_type_field)* ","?

struct_type_field:
    #[create_struct_type_field]
    | !IDENTIFIER ":" !type_expression

sum_type_statement:
    #[create_sum_type]
    | "type" !IDENTIFIER "=" !sum_type_fields
    #[create_sum_type]
    | "type" !IDENTIFIER "=" "(" !sum_type_fields ")"

sum_type_fields:
    #[@prepend]
    | !sum_type_field ("|" !sum_type_field)+

sum_type_field:
    #[create_sum_field]
    | !IDENTIFIER ("of" !type_expression)?

type_parameter:
    #[create_type_parameter]
    | "'" !IDENTIFIER

type_parameter_list:
    #[@prepend]
    | !type_parameter ("," !type_parameter)* ","?

type_atom:
    | !type_parameter
    #[create_self_type]
    | "Self"
    #[create_name]
    | !IDENTIFIER
    #[create_struct_type]
    | "{" !struct_type_fields "}"
    #[create_tuple_type]
    | "(" !type_expression_list? ")"
    | "(" !type_atom ")"
