typethon/syntax/parser.py
from __future__ import annotations

import contextlib
import io
import typing

import attr

from . import ast
from .tokens import (
    IdentifierToken,
    NumberToken,
    NumberTokenFlags,
    StringToken,
    StringTokenFlags,
    Token,
    TokenType,
)
from .scanner import Scanner

__all__ = ('Parser',)

ReturnT = typing.TypeVar('ReturnT')

# TODO: error handling, lambda (decide on syntax)
# overhaul, this is based on CPython grammar and
# its very inefficient without the optimizations


class TokenStream:
    def __init__(self, scanner: Scanner) -> None:
        self.scanner = scanner
        self.cache: typing.List[Token] = []

    def peek_token(self, index: int = 0) -> Token:
        while len(self.cache) <= index:
            token = self.scanner.scan()
            self.cache.append(token)

        return self.cache[index]

    def consume_token(self) -> Token:
        if self.cache:
            return self.cache.pop(0)

        return self.scanner.scan()

    def view(self) -> TokenStreamView:
        return TokenStreamView(self, 0)


class TokenStreamView:
    def __init__(self, stream: TokenStream, position: int) -> None:
        self.stream = stream
        self.position = position

    @property
    def scanner(self) -> Scanner:
        return self.stream.scanner

    @property
    def cache(self) -> typing.List[Token]:
        return self.stream.cache

    def peek_token(self, index: int = 0) -> Token:
        while len(self.cache) <= self.position + index:
            token = self.scanner.scan()
            self.cache.append(token)

        return self.cache[self.position + index]

    def consume_token(self) -> Token:
        token = self.peek_token()
        self.position += 1
        return token

    def accept(self) -> None:
        del self.stream.cache[: self.position]

    def view(self) -> TokenStreamView:
        return TokenStreamView(self.stream, self.position)


class AlternativeRejectedError(Exception):
    def __str__(self) -> str:
        return 'The alternative was rejected.'


@attr.s(slots=True)
class Alternative:
    accepted: bool = attr.ib(init=False, default=False)
    exception: typing.Optional[Exception] = attr.ib(init=False, default=None)

    def reject(self) -> None:
        raise AlternativeRejectedError()


class Parser:
    def __init__(self, scanner: Scanner) -> None:
        self.scanner = scanner

        self.root_stream = TokenStream(scanner)
        self.stream: typing.Union[TokenStream, TokenStreamView] = self.root_stream

    @classmethod
    def from_source(cls, source: str) -> Parser:
        scanner = Scanner(source)
        return cls(scanner)

    @classmethod
    def parse_module(cls, source: str) -> ast.ModuleNode:
        return cls.from_source(source).module()

    @classmethod
    def parse_expressions(cls, source: str) -> ast.ExpressionNode:
        parser = cls.from_source(source)
        expressions = parser.expressions()

        while True:
            token = parser.stream.peek_token()
            if token.type is TokenType.NEWLINE:
                parser.stream.consume_token()
            elif token.type is TokenType.EOF:
                return expressions
            else:
                assert False, '<Expected (NEWLINE, EOF)>'

    @contextlib.contextmanager
    def alternative(self) -> typing.Iterator[Alternative]:
        stream = self.stream
        self.stream = stream.view()

        alternative = Alternative()

        try:
            yield alternative

            if stream is self.root_stream:
                self.stream.accept()
            else:
                assert isinstance(stream, TokenStreamView)
                stream.position = self.stream.position

            alternative.accepted = True
        except (AssertionError, AlternativeRejectedError) as exc:
            alternative.exception = exc
        finally:
            self.stream = stream

    @contextlib.contextmanager
    def lookahead(self, *types: TokenType, negative: bool = False) -> typing.Iterator[Alternative]:
        with self.alternative() as alternative:
            yield alternative

            token = self.stream.peek_token()
            result = token.type in types

            if result if negative else not result:
                alternative.reject()

    def optional(self, function: typing.Callable[[], ReturnT]) -> typing.Optional[ReturnT]:
        with self.alternative():
            return function()

    def optional_lookahead(
        self,
        function: typing.Callable[[], ReturnT],
        *types: TokenType,
        negative: bool = False,
    ) -> typing.Optional[ReturnT]:
        result = None

        with self.lookahead(*types, negative=negative) as alternative:
            result = function()

        if alternative.accepted:
            return result

    def module(self) -> ast.ModuleNode:
        statements: typing.List[ast.StatementNode] = []

        with self.alternative():
            body = self.statements()
            statements.extend(body)

        token = self.stream.peek_token()
        if token.type is not TokenType.EOF:
            assert False, '<Expected EOF>'

        self.stream.consume_token()
        return ast.ModuleNode(
            startpos=statements[0].startpos if statements else 0,
            endpos=statements[-1].endpos if statements else 0,
            body=statements,
        )

    def statements(self) -> typing.List[ast.StatementNode]:
        statements: typing.List[ast.StatementNode] = []

        statement = self.statement()
        if isinstance(statement, list):
            statements.extend(statement)
        else:
            statements.append(statement)

        while True:
            with self.alternative() as alternative:
                statement = self.statement()
                if isinstance(statement, list):
                    statements.extend(statement)
                else:
                    statements.append(statement)

            if not alternative.accepted:
                return statements

    def statement(
        self,
    ) -> typing.Union[ast.StatementNode, typing.List[ast.StatementNode]]:
        token = self.stream.peek_token()

        if token.type is TokenType.ASYNC:
            return self.async_statement()
        elif token.type is TokenType.CLASS:
            return self.class_def()
        elif token.type is TokenType.DEF:
            return self.function_def()
        elif token.type is TokenType.FOR:
            return self.for_statement()
        elif token.type is TokenType.IF:
            return self.if_statement()
        elif token.type is TokenType.TRY:
            return self.try_statement()
        elif token.type is TokenType.WHILE:
            return self.while_statement()
        elif token.type is TokenType.WITH:
            return self.with_statement()
        elif token.type is TokenType.AT:
            return self.decorated_statement()

        return self.simple_statements()

    def block(self) -> typing.List[ast.StatementNode]:
        token = self.stream.peek_token()
        if token.type is TokenType.NEWLINE:
            self.stream.consume_token()

            token = self.stream.peek_token()
            if token.type is not TokenType.INDENT:
                assert False, '<Expected INDENT>'

            self.stream.consume_token()
            statements = self.statements()

            token = self.stream.peek_token()
            if token.type is not TokenType.DEDENT:
                assert False, '<Expected DEDENT>'

            self.stream.consume_token()
            return statements

        return self.simple_statements()

    def async_statement(
        self,
        *,
        decorators: typing.Optional[typing.List[ast.ExpressionNode]] = None,
    ) -> ast.StatementNode:
        async_token = self.stream.consume_token()
        assert async_token.type is TokenType.ASYNC

        token = self.stream.peek_token()

        if decorators is not None:
            if token.type is not TokenType.DEF:
                assert False, '<Can Only Decorate Async Function>'

        if token.type is TokenType.DEF:
            return self.function_def(async_token=async_token)
        elif token.type is TokenType.FOR:
            return self.for_statement(async_token=async_token)
        elif token.type is TokenType.WITH:
            return self.with_statement(async_token=async_token)

        assert False, '<Unexpected Token>'

    def class_def(
        self,
        *,
        decorators: typing.Optional[typing.List[ast.ExpressionNode]] = None,
    ) -> ast.ClassDefNode:
        token = self.stream.consume_token()
        assert token.type is TokenType.CLASS

        if decorators is not None:
            startpos = decorators[-1].startpos
        else:
            decorators = []
            startpos = token.start

        token = self.stream.peek_token()
        if token.type is not TokenType.IDENTIFIER:
            assert False, '<Expected IDENTIFIER>'

        self.stream.consume_token()
        assert isinstance(token, IdentifierToken)

        content = token.content
        #expression = None

        # token = self.stream.peek_token() class X from Y
        #if token.type is TokenType.FROM:
        #    self.stream.consume_token()
        #    expression = self.expression()

        expressions: typing.List[ast.ExpressionNode] = []
        arguments: typing.List[ast.KeywordArgumentNode] = []

        token = self.stream.peek_token()
        if token.type is TokenType.OPENPAREN:
            self.stream.consume_token()

            args = self.arguments()
            kwargs = self.keyword_args()

            expressions.extend(args)
            arguments.extend(kwargs)

            token = self.stream.peek_token()
            if token.type is not TokenType.CLOSEPAREN:
                assert False, '<Expected CLOSEPAREN>'

            self.stream.consume_token()

        token = self.stream.peek_token()
        if token.type is not TokenType.COLON:
            assert False, '<Expected COLON>'

        self.stream.consume_token()

        statements = self.block()
        return ast.ClassDefNode(
            startpos=startpos,
            endpos=statements[-1].endpos,
            name=content,
            bases=expressions,
            kwargs=arguments,
            #meta=expression,
            body=statements,
            decorators=decorators,
        )

    def function_def(
        self,
        *,
        decorators: typing.Optional[typing.List[ast.ExpressionNode]] = None,
        async_token: typing.Optional[Token] = None,
    ) -> ast.FunctionDefNode:
        token = self.stream.consume_token()
        assert token.type is TokenType.DEF

        if decorators is not None:
            startpos = decorators[-1].startpos
        else:
            startpos = async_token.start if async_token is not None else token.start
            decorators = []

        expression = None

        token = self.stream.peek_token()
        if token.type is not TokenType.IDENTIFIER:
            assert False, '<Expected IDENTIFIER>'

        self.stream.consume_token()
        assert isinstance(token, IdentifierToken)

        content = token.content

        token = self.stream.peek_token()
        if token.type is not TokenType.OPENPAREN:
            assert False, '<Expected OPENPAREN>'

        self.stream.consume_token()
        parameters = self.parameters()

        token = self.stream.peek_token()
        if token.type is not TokenType.CLOSEPAREN:
            assert False, '<Expected CLOSEPAREN>'

        self.stream.consume_token()
        endpos = token.end

        token = self.stream.peek_token()
        if token.type is TokenType.RARROW:
            self.stream.consume_token()
            expression = self.type_expression()

        token = self.stream.peek_token()
        if token.type is not TokenType.COLON:
            return ast.FunctionDefNode(
                startpos=startpos,
                endpos=expression.endpos if expression is not None else endpos,
                is_async=async_token is not None,
                name=content,
                parameters=parameters,
                body=None,
                decorators=decorators,
                returns=expression,
            )

        self.stream.consume_token()

        statements = self.block()
        return ast.FunctionDefNode(
            startpos=startpos,
            endpos=statements[-1].endpos,
            is_async=async_token is not None,
            name=content,
            parameters=parameters,
            body=statements,
            decorators=decorators,
            returns=expression,
        )

    def parameters(self) -> typing.List[ast.FunctionParameterNode]:
        parameters: typing.List[ast.FunctionParameterNode] = []

        encountered_default = False
        encountered_posonly = False
        encountered_kwonly = False

        encountered_vararg = False
        encountered_varkwarg = False
        encountered_kwarg = False

        while True:
            token = self.stream.peek_token()
            if token.type is TokenType.SLASH:
                if not parameters or encountered_posonly:
                    assert False, '<Slash Not Permitted>'

                self.stream.consume_token()
                encountered_posonly = True

                for parameter in parameters:
                    parameter.kind = ast.ParameterKind.POSONLY

                token = self.stream.peek_token()
                if token.type is not TokenType.COMMA:
                    assert False, '<Expected Comma>'

                self.stream.consume_token()
            elif token.type is TokenType.STAR:
                token = self.stream.peek_token(1)

                if token.type is TokenType.COMMA:
                    self.stream.consume_token()

                    if encountered_kwonly or encountered_varkwarg:
                        assert False, '<Star Not Permitted>'

                    self.stream.consume_token()
                    encountered_kwonly = True

            with self.alternative() as alternative:
                parameter = self.parameter()

                if parameter.kind is ast.ParameterKind.VARARG:
                    encountered_vararg = True
                elif parameter.kind is ast.ParameterKind.VARKWARG:
                    encountered_varkwarg = True
                elif encountered_vararg or encountered_kwonly or encountered_varkwarg:
                    parameter.kind = ast.ParameterKind.KWONLY
                    encountered_kwarg = True
                else:
                    if parameter.default is not None:
                        encountered_default = True
                    elif encountered_default:
                        assert False, '<Expected Default>'

                parameters.append(parameter)

            token = self.stream.peek_token()
            is_comma = token.type is TokenType.COMMA

            if not alternative.accepted or not is_comma:
                kwonly_permitted = encountered_kwarg or encountered_varkwarg

                if encountered_kwonly and not kwonly_permitted:
                    assert False, '<Argument Must Follow *>'

                return parameters

            self.stream.consume_token()

    def parameter(self) -> ast.FunctionParameterNode:
        token = self.stream.peek_token()
        startpos = token.start
        endpos = token.end

        if token.type is TokenType.IDENTIFIER:
            self.stream.consume_token()
            assert isinstance(token, IdentifierToken)

            kind = ast.ParameterKind.ARG
            content = token.content
        elif token.type is TokenType.STAR:
            self.stream.consume_token()

            token = self.stream.peek_token()
            if token.type is not TokenType.IDENTIFIER:
                assert False, '<Expected IDENTIFIER>'

            self.stream.consume_token()
            assert isinstance(token, IdentifierToken)

            kind = ast.ParameterKind.VARARG
            content = token.content
        elif token.type is TokenType.DOUBLESTAR:
            self.stream.consume_token()

            token = self.stream.peek_token()
            if token.type is not TokenType.IDENTIFIER:
                assert False, '<Expected IDENTIFIER>'

            self.stream.consume_token()
            assert isinstance(token, IdentifierToken)

            kind = ast.ParameterKind.VARKWARG
            content = token.content
        else:
            assert False, '<Unexpected Token>'

        expression = None
        default = None

        token = self.stream.peek_token()
        if token.type is TokenType.COLON:
            self.stream.consume_token()
            expression = self.type_expression()

        token = self.stream.peek_token()
        if token.type is TokenType.EQUAL:
            self.stream.consume_token()
            default = self.expression()

        if default is not None:
            endpos = default.endpos
        elif expression is not None:
            endpos = expression.endpos

        return ast.FunctionParameterNode(
            startpos=startpos,
            endpos=endpos,
            name=content,
            kind=kind,
            annotation=expression,
            default=default,
        )

    def for_statement(self, *, async_token: typing.Optional[Token] = None) -> ast.ForNode:
        token = self.stream.consume_token()
        assert token.type is TokenType.FOR

        startpos = async_token.start if async_token is not None else token.start
        expression = self.star_targets()

        token = self.stream.peek_token()
        if token.type is not TokenType.IN:
            assert False, '<Expected IN>'

        self.stream.consume_token()
        iterator = self.star_expressions()

        token = self.stream.peek_token()
        if token.type is not TokenType.COLON:
            assert False, '<Expected COLON>'

        self.stream.consume_token()

        body = self.block()
        statements: typing.List[ast.StatementNode] = []

        token = self.stream.peek_token()
        if token.type is TokenType.ELSE:
            else_body = self.else_statement()
            statements.extend(else_body)

        return ast.ForNode(
            startpos=startpos,
            endpos=statements[-1].endpos if statements else body[-1].endpos,
            is_async=async_token is not None,
            target=expression,
            iterator=iterator,
            body=body,
            else_body=statements,
        )

    def if_statement(self) -> ast.IfNode:
        token = self.stream.consume_token()
        assert token.type is TokenType.IF

        startpos = token.start
        expression = self.expression()

        token = self.stream.peek_token()
        if token.type is not TokenType.COLON:
            assert False, '<Expected COLON>'

        self.stream.consume_token()

        body = self.block()
        else_body: typing.List[ast.StatementNode] = []

        token = self.stream.peek_token()
        if token.type is TokenType.ELIF:
            statement = self.elif_statement()
            else_body.append(statement)

        elif token.type is TokenType.ELSE:
            statements = self.else_statement()
            else_body.extend(statements)

        return ast.IfNode(
            startpos=startpos,
            endpos=else_body[-1].endpos if else_body else body[-1].endpos,
            condition=expression,
            body=body,
            else_body=else_body,
        )

    def elif_statement(self) -> ast.IfNode:
        token = self.stream.consume_token()
        assert token.type is TokenType.ELIF

        startpos = token.start
        expression = self.expression()

        token = self.stream.peek_token()
        if token.type is not TokenType.COLON:
            assert False, '<Expected COLON>'

        self.stream.consume_token()

        body = self.block()
        statements: typing.List[ast.StatementNode] = []

        token = self.stream.peek_token()
        if token.type is TokenType.ELIF:
            else_block = self.elif_statement()
            statements.append(else_block)

        elif token.type is TokenType.ELSE:
            else_block = self.else_statement()
            statements.extend(else_block)

        return ast.IfNode(
            startpos=startpos,
            endpos=statements[-1].endpos if statements else body[-1].endpos,
            condition=expression,
            body=body,
            else_body=statements,
        )

    def else_statement(self) -> typing.List[ast.StatementNode]:
        self.stream.consume_token()

        token = self.stream.peek_token()
        if token.type is not TokenType.COLON:
            assert False, '<Expected COLON>'

        self.stream.consume_token()
        return self.block()

    def try_statement(self) -> ast.TryNode:
        token = self.stream.consume_token()
        assert token.type is TokenType.TRY

        startpos = token.start

        token = self.stream.peek_token()
        if token.type is not TokenType.COLON:
            assert False, '<Expected COLON>'

        self.stream.consume_token()

        block = self.block()
        handlers = self.except_handlers()

        else_body: typing.List[ast.StatementNode] = []
        finally_body: typing.List[ast.StatementNode] = []

        token = self.stream.peek_token()
        if handlers and token.type is TokenType.ELSE:
            statements = self.else_statement()
            else_body.extend(statements)

        token = self.stream.peek_token()
        if token.type is TokenType.FINALLY:
            self.stream.consume_token()

            token = self.stream.peek_token()
            if token.type is not TokenType.COLON:
                assert False, '<Expected COLON>'

            self.stream.consume_token()

            statements = self.block()
            finally_body.extend(statements)

        if not handlers and not finally_body:
            assert False, '<Must Have Except Or Finally>'

        if finally_body:
            endpos = finally_body[-1].endpos
        elif else_body:
            endpos = else_body[-1].endpos
        else:
            endpos = handlers[-1].endpos

        return ast.TryNode(
            startpos=startpos,
            endpos=endpos,
            body=block,
            handlers=handlers,
            else_body=else_body,
            final_body=finally_body,
        )

    def except_handlers(self) -> typing.List[ast.ExceptHandlerNode]:
        handlers: typing.List[ast.ExceptHandlerNode] = []

        while True:
            token = self.stream.peek_token()
            if token.type is not TokenType.EXCEPT:
                return handlers

            handler = self.except_handler()
            handlers.append(handler)

    def except_handler(self) -> ast.ExceptHandlerNode:
        token = self.stream.consume_token()
        assert token.type is TokenType.EXCEPT

        startpos = token.start

        expression = self.optional(self.expression)
        target = None

        token = self.stream.peek_token()
        if token.type is TokenType.AS:
            self.stream.consume_token()

            token = self.stream.peek_token()
            if token.type is not TokenType.IDENTIFIER:
                assert False, '<Expected IDENTIFIER>'

            self.stream.consume_token()
            assert isinstance(token, IdentifierToken)

            target = token.content

        token = self.stream.peek_token()
        if token.type is not TokenType.COLON:
            assert False, '<Expected COLON>'

        self.stream.consume_token()
        statements = self.block()

        return ast.ExceptHandlerNode(
            startpos=startpos,
            endpos=statements[-1].endpos,
            type=expression,
            target=target,
            body=statements,
        )

    def while_statement(self) -> ast.WhileNode:
        token = self.stream.consume_token()
        assert token.type is TokenType.WHILE

        startpos = token.start
        expression = self.expression()

        token = self.stream.peek_token()
        if token.type is not TokenType.COLON:
            assert False, '<Expected COLON>'

        self.stream.consume_token()

        body = self.block()
        statements: typing.List[ast.StatementNode] = []

        token = self.stream.peek_token()
        if token.type is TokenType.ELSE:
            else_block = self.else_statement()
            statements.extend(else_block)

        return ast.WhileNode(
            startpos=startpos,
            endpos=statements[-1].endpos if statements else body[-1].endpos,
            condition=expression,
            body=body,
            else_body=statements,
        )

    def with_statement(self, *, async_token: typing.Optional[Token] = None) -> ast.WithNode:
        token = self.stream.consume_token()
        assert token.type is TokenType.WITH

        startpos = async_token.start if async_token is not None else token.start

        token = self.stream.peek_token()
        if token.type is TokenType.OPENPAREN:
            self.stream.consume_token()

            items = self.with_items()

            token = self.stream.peek_token()
            if token.type is TokenType.COMMA:
                self.stream.consume_token()

            token = self.stream.peek_token()
            if token.type is not TokenType.CLOSEPAREN:
                assert False, '<Expected CLOSEPAREN>'

            self.stream.consume_token()
        else:
            items = self.with_items()

            token = self.stream.peek_token()
            if token.type is TokenType.COMMA:
                assert False, '<Trailing Comma Not Premitted>'

        token = self.stream.peek_token()
        if token.type is not TokenType.COLON:
            assert False, '<Expected COLON>'

        self.stream.consume_token()
        statements = self.block()

        return ast.WithNode(
            startpos=startpos,
            endpos=statements[-1].endpos,
            is_async=async_token is not None,
            items=items,
            body=statements,
        )

    def with_items(self) -> typing.List[ast.WithItemNode]:
        items: typing.List[ast.WithItemNode] = []

        item = self.with_item()
        items.append(item)

        token = self.stream.peek_token()
        if token.type is not TokenType.COMMA:
            return items

        self.stream.consume_token()

        while True:
            with self.alternative() as alternative:
                item = self.with_item()
                items.append(item)

            token = self.stream.peek_token()
            is_comma = token.type is TokenType.COMMA

            if not alternative.accepted or not is_comma:
                return items

            self.stream.consume_token()

    def with_item(self) -> ast.WithItemNode:
        expression = self.expression()

        token = self.stream.peek_token()
        if token.type is not TokenType.AS:
            return ast.WithItemNode(
                startpos=expression.startpos,
                endpos=expression.endpos,
                contextmanager=expression,
                target=None,
            )

        self.stream.consume_token()

        target = self.star_target()
        return ast.WithItemNode(
            startpos=expression.startpos,
            endpos=target.endpos,
            contextmanager=expression,
            target=target,
        )

    def decorated_statement(self) -> ast.StatementNode:
        token = self.stream.consume_token()
        assert token.type is TokenType.AT

        expressions: typing.List[ast.ExpressionNode] = []

        expression = self.expression()
        expressions.append(expression)

        while True:
            token = self.stream.peek_token()
            if token.type is not TokenType.NEWLINE:
                assert False, '<Expected NEWLINE>'

            self.stream.consume_token()
            token = self.stream.peek_token()

            if token.type is TokenType.AT:
                self.stream.consume_token()

                expression = self.expression()
                expressions.append(expression)
            elif token.type is TokenType.ASYNC:
                return self.async_statement(decorators=expressions)
            elif token.type is TokenType.DEF:
                return self.function_def(decorators=expressions)
            elif token.type is TokenType.CLASS:
                return self.class_def(decorators=expressions)

            assert False, '<Unexpected Token>'

    def simple_statements(self) -> typing.List[ast.StatementNode]:
        statements: typing.List[ast.StatementNode] = []

        while True:
            statement = self.simple_statement()
            statements.append(statement)

            token = self.stream.peek_token()
            if token.type is TokenType.SEMICOLON:
                self.stream.consume_token()

            token = self.stream.peek_token()
            if token.type in (TokenType.NEWLINE, TokenType.EOF):
                self.stream.consume_token()
                return statements

            assert False, f'<Expected (NEWLINE, EOF): {token!r}>'

    def assignment(self) -> ast.StatementNode:
        token = self.stream.peek_token()

        if token.type is TokenType.IDENTIFIER:
            with self.alternative():
                self.stream.consume_token()
                assert isinstance(token, IdentifierToken)

                expression = ast.NameNode(
                    startpos=token.start, endpos=token.end, value=token.content
                )

                return self.annassign(expression)
        elif token.type is TokenType.OPENPAREN:
            with self.alternative():
                self.stream.consume_token()
                expression = self.optional(self.single_target)

                if expression is None:
                    expression = self.optional(self.single_subscript_attribute_target)

                token = self.stream.peek_token()
                if token.type is not TokenType.CLOSEPAREN:
                    assert False, '<Expected CLOSEPAREN>'

                assert expression is not None
                return self.annassign(expression)

        with self.alternative():
            expression = self.single_subscript_attribute_target()
            return self.annassign(expression)

        with self.alternative():
            expressions: typing.List[ast.ExpressionNode] = []

            expression = self.star_targets()
            expressions.append(expression)

            token = self.stream.peek_token()
            if token.type is not TokenType.EQUAL:
                assert False, '<Expected EQUAL>'

            self.stream.consume_token()

            while True:
                with self.lookahead(TokenType.EQUAL) as alternative:
                    expression = self.star_targets()

                if alternative.accepted:
                    expressions.append(expression)
                else:
                    expression = self.yield_or_star_expressions()
                    return ast.AssignNode(
                        startpos=expressions[0].startpos,
                        endpos=expressions[-1].endpos,
                        targets=expressions,
                        value=expression,
                    )

                self.stream.consume_token()

        with self.alternative():
            expression = self.single_target()
            return self.augassign(expression)

        assert False, '<Invalid Assignment>'

    def annassign(self, target: ast.ExpressionNode) -> ast.AnnAssignNode:
        token = self.stream.peek_token()
        if token.type is not TokenType.COLON:
            assert False, '<Expected COLON>'

        self.stream.consume_token()
        annotation = self.type_expression()

        token = self.stream.peek_token()
        if token.type is not TokenType.EQUAL:
            if not isinstance(target, ast.NameNode):
                assert False, '<Expected NAME>'

            return ast.AnnAssignNode(
                startpos=target.startpos,
                endpos=annotation.endpos,
                target=target,
                annotation=annotation,
                value=None,
            )

        self.stream.consume_token()

        expression = self.yield_or_star_expressions()
        return ast.AnnAssignNode(
            startpos=target.startpos,
            endpos=expression.endpos,
            target=target,
            annotation=annotation,
            value=expression,
        )

    def augassign(self, target: ast.ExpressionNode) -> ast.AugAssignNode:
        token = self.stream.peek_token()
